2001-02-25  Akim Demaille  <akim@epita.fr>

	* autoupdate.in (&parse_args): Support `-'.

	
2001-02-25  Akim Demaille  <akim@epita.fr>

	* autoupdate.in: Less Bournisms, more Wallisms.

2001-02-23  Jim Meyering  <meyering@lucent.com>

	* acgeneral.m4 (_AC_INIT_PREPARE_FS_SEPARATORS): Fix typo: s/;/:/
	* acgeneral.m4 (_AC_INIT_PREPARE_FS_SEPARATORS): Revert that change.
	There was no typo.

2001-02-22  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi: Typos and formatting changes.

2001-02-21  Lars J. Aas  <larsa@sim.no>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): use `AS_EXIT(0)' instead
	of `exit 0' when exiting config.status.

2001-02-21  Tim Van Holder  <tim.van.holder@pandora.be>

	* doc/autoconf.texi: Add new node discussing issues related to
	file systems (DOS, specifically). Document DJGPP's bash's special
	handling of $PATH_SEPARATOR.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* autoupdate.in: New.  Replaces autoupdate.sh.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* autoscan.pl (&find_configure_ac): New.

2001-02-20  Paul Martinolich <martinol@datasync.com>

	* autoscan.pl (check_configure_ac): Pretty missing macro warnings
	output.

2001-02-19  Paul Eggert  <eggert@twinsun.com>

	* aclang.m4 (AC_C_INLINE): Define "inline" to empty if the
	compiler doesn't support 'static inline'.  This is needed for
	Encore Umax-3.0.9.16b.

2001-02-19  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_LANG_COMPILER_WORKS): Rename as...
	(_AC_COMPILER_EXEEXT_WORKS): this.  Use the `a.out' or `a.exe'
	left by _AC_COMPILER_EXEEXT_DEFAULT to check if the compiler works.
	(_AC_COMPILER_EXEEXT_CROSS): Extract from the above macro.
	(_AC_COMPILER_EXEEXT): Use them.
	Adjust all the compiler looking macros to check for EXEEXT
	*first*, then OBJEXT.
	Set ac_exeext yourself.
	(_AC_COMPILER_EXEEXT_O): Don't.

2001-02-07  Pavel Roskin  <proski@gnu.org>

	* tests/atspecific.m4 (AT_CONFIGURE_AC): Double quote constant
	part of the second argument to AT_DATA.