@@ -375,11 +375,13 @@ done; }
 ])# AS_MKDIR_P
 
 
-# _AS_TEST_PREPARE
-# ----------------
+# _AS_BROKEN_TEST_PREPARE
+# -----------------------
+# FIXME: This does not work and breaks way too many things.
+#
 # Find out ahead of time whether we want test -x (preferred) or test -f
 # to check whether a file is executable.
-m4_defun([_AS_TEST_PREPARE],
+m4_defun([_AS_BROKEN_TEST_PREPARE],
 [# Find out how to test for executable files. Don't use a zero-byte file,
 # as systems may use methods other than mode bits to determine executability.
 cat >conftest.file <<_ASEOF
@@ -395,7 +397,17 @@ else
   AS_ERROR([cannot check whether a file is executable on this system])
 fi
 rm -f conftest.file
-])# _AS_TEST_PREPARE
+])# _AS_BROKEN_TEST_PREPARE
+
+
+# _AS_TEST_PREPARE
+# ----------------
+m4_defun([_AS_TEST_PREPARE],
+[as_executable_p="test -f"
+])# _AS_BROKEN_TEST_PREPARE
+
+
+
 
 
 
